2009-07-25  Christopher Bratusek <zanghar@freenet.de>
	* src/Makefile.in: include $CFLAGS in gtk-style rule

	* configure.in: ... non-bash compatibility

	* lisp/sawfish/wm/mmc/window-manipulation.jl: 3 new functions based on sawfish-mmc code (maximize-reframe, maximize-unframe, rename-window)

	* sawfish.ebuild.in: improved

2009-07-24  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/frames.jl: support theme-tarballs compressed with XZ and LZMA (needs librep 0.90.1)

	* configure.in: require librep 0.90.1

	* lisp/sawfish/wm/ext/infinite-desktop.jl: fixed cursor warping [Jeremy Hankins]

	* lisp/sawfish/wm/defaults.jl: update GNOME-Check for recent versions [Alexey I. Froloff]

	* lisp/sawfish/wm/placement/stagger.jl: fix group of stagger option

	* sawfish.desktop
	* sawfish-wm.dektop: fixed a typo, removed unneeded entries

	* lisp/sawfish/ui/slot.jl: Re-add patch to make strings fully translatable [Alexey I. Froloff]

2009-07-18  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widget.jl: 	- allow negative values in spinbuttons in sawfish-ui
					- connect spinbuttons to value-changed signal (allows typing in the value manually)

	* lisp/sawfish/wm/state/maximize.jl
	* lisp/sawfish/wm/ext/match-window.jl: added fullscreen-xinerama window matcher [Jeremy Hankins]

2009-07-15  Christopher Bratusek <zanghar@freenet.de>
	* src/Makefile.in: add --tag=CC there necessary on some systems [Gentoo]

	* lisp/sawfish/wm/ext/match-window.jl: added fullscreen and new-workspace matches [Jeremy Hankins]

2009-07-10  Christopher Bratusek <zanghar@freenet.de>
	* sawfish-ksm.desktop: make sawfish appear in KDEs WM Selector

2009-07-09  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/move-cursor.jl: Fixed small glitch

2009-07-04  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tab.jl: make changed value of
	raise-tabs-on-hover take effect immediately

2009-07-03  Christopher Bratusek <zanghar@freenet.de>