@@ -28,6 +28,8 @@ they occurred between. For more detailed information see the
 @item Fix cursor warping in Infinite-Desktop [Jeremy Hankins]
 
 @item Fixed group of the stagger options [Christopher Bratusek]
+
+@item Fixed repexecdir definition in the spec-file [Christopher Bratusek]
 @end itemize
 @item New features:
 @itemize @minus
