@@ -7,6 +7,8 @@
 
 	* sawfish.ebuild.in: improved
 
+	* sawfish.spec.in: fixed repexecdir definition
+
 2009-07-24  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/frames.jl: support theme-tarballs compressed with XZ and LZMA (needs librep 0.90.1)
 
